--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# root .gitignore
+/node_modules
+/dist
+/.env
+client/node_modules
+server/node_modules
+client/dist
+server/dist
