--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
+    "express": "^5.1.0",
     "sqlite3": "^5.1.7"
   }
 }
