Refactor config: move DB config to src/config/db.ts; update app config and env vars - Separate database config from general app config - Update .env and use env vars for port, API URLs, and frontend origin - Adjust app.ts and main.ts to use new config structure - Update prisma schema and migration files - Remove old db files and obsolete config files

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-# Server
+# Server environment variables
 PORT=4000
-DATABASE_URL="file:./server/prisma/dev.db"
-DUMMYJSON_API=https://dummyjson.com/products
+DATABASE_URL="file:./dev.db"
+DUMMYJSON_API="https://dummyjson.com/products"
+FRONTEND_ORIGIN="http://localhost:3000"
