--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "migrate": "dotenv -e .env -- npx prisma migrate dev --schema=prisma/schema.prisma --name init"
+    "migrate": "dotenv -e .env -- npx prisma migrate dev --schema=prisma/schema.prisma --name init",
+    "seed": "ts-node-dev prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/node": "^22.15.24",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
@@ -20,10 +23,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
     "express": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "node-fetch": "^3.3.2",
+    "sqlite3": "^5.1.7",
+    "zod": "^3.25.36"
   }
 }
