--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,15 @@
 {
+  "include": ["src", "src/config"],
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": ".",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "typeRoots": ["./node_modules/@types"],        
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"] 
   }
 }
