--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,15 +1,14 @@
 {
-  "include": ["src", "src/config"],
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "src",
     "esModuleInterop": true,
     "strict": true,
-    "typeRoots": ["./node_modules/@types"],        
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"] 
-  }
+    "types": ["node"]
+  },
+  "include": ["src"]
 }
