--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # Server environment variables
 PORT=4000
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="file:./dev.db?connection_limit=1&socket_timeout=10000"
 DUMMYJSON_API="https://dummyjson.com/products"
 FRONTEND_ORIGIN="http://localhost:5173"
