--- a/server/package.json
+++ b/server/package.json
@@ -8,32 +8,39 @@
     "migrate": "dotenv -e .env -- npx prisma migrate dev --schema=prisma/schema.prisma --name init",
     "seed": "ts-node scripts/seed.ts",
     "rollback": "ts-node scripts/rollback.ts",
-    "ps": "prisma studio"
+    "ps": "prisma studio",
+    "generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/boxen": "^2.1.0",
+    "@types/chalk": "^0.4.31",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/figlet": "^1.7.0",
     "@types/node": "^22.15.24",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.25.42"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
+    "boxen": "^5.1.2",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "figlet": "^1.8.1",
     "helmet": "^8.1.0",
     "node-fetch": "^3.3.2",
-    "sqlite3": "^5.1.7",
-    "zod": "^3.25.36"
+    "sqlite3": "^5.1.7"
   }
 }
