refactor: update product management UI and schema, remove old table components

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "dev:client": "npm run dev --prefix client",
         "dev:server": "npm run dev --prefix server",
         "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-        "seed-server": "npm run seed --workspace=server",
-        "ps-server": "npm run ps --workspace=server",
-        "prisma:generate": "prisma generate --schema=server/prisma/schema.prisma"
+        "seed:server": "npm run seed --workspace=server",
+        "rollback:server": "npm run rollback --workspace=server",
+        "ps:studio": "npx prisma studio --schema=./server/prisma/schema.prisma",
+        "ps:server": "npm run ps --workspace=server",
+        "ps:generate": "npx prisma generate --schema=./server/prisma/schema.prisma"
     },
     "devDependencies": {        
         "concurrently": "^9.1.2"
