--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.8",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
